<resources>
    <string name="app_name">BookingShine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="complaints_and_suggestions">Complaints and suggestions</string>
    <string name="subject">Subject</string>
    <string name="description">description</string>
    <string name="descriptiontext">Description</string>
    <string name="back">Back</string>
    <string name="home">HOME</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="business">Business</string>
    <string name="avatar">avatar</string>
    <string name="schedule_example">Schedule Example</string>
    <string name="BusinessName">Business Name</string>
    <string name="BusinessLocation">Business Location</string>
    <string name="BusinessAtentionTime">Atention Time</string>
    <string name="BusinessLogin">Business Login</string>
    <string name="Password">Password</string>
    <string name="BusinessContact">BusinessContact</string>
    <string name="SignOff">Sign Off</string>
    <string name="Login">Login</string>
    <string name="BusinessSignIn">Business Sign in</string>
    <string name="msgToastSuccess">Record is inserted</string>
    <string name="login_usuario">Login USUARIO</string>
    <string name="login_negocio">Login Negocio</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="search">Search</string>
    <string name="eda">eda</string>
    <string name="description1">Description</string>
    <string name="schedule_example1">Schedule Example</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name_business">Name business</string>
    <string name="sing_in">Sing in</string>
    <string name="register_new_user">Register new user</string>
    <string name="name_user">Name User</string>
    <string name="sign_off">Sign off</string>
    <string name="phone_email">Phone|Email</string>
    <string name="contact_information">Contact Information</string>
    <string name="example_example_com">EXAMPLE@EXAMPLE.COM</string>
    <string name="number_xx_xxxxxxx">Number +XX XXXXXXX</string>
    <string name="close_session">CLOSE SESSION</string>
    <string name="reason_to_cancel">Reason to Cancel</string>
    <string name="reason_to_reschedule">Reason to Reschedule</string>
    <string name="restore_password_user">Restore Password User</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="restore">Restore</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="username_or_email">Username or Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>
    <string name="or">or</string>
    <string name="SendAndHome">Send and Home</string>
</resources>